    SavePeriod set to 0). NoSyncAllowed defaults to 0.

 - Freeze now requires Berkeley DB 4.1. It no longer compiles with older
   Berkeley DB releases.

   With Visual C++, you need to use the same project directory
   settings when building Berkeley DB and Ice. In particular, if you
   build Ice with STLPort, you need to build Berkeley DB with the same
   STLPort.

- Added new C++ AbstractMutex class, and helper templates
  (AbstractMutexI, AbstractMutexReadI, AbstractMutexWriteI) to easily
  implement AbstractMutex using Mutex, RecMutex, Monitor or
  RWRecMutex.

- Fixed a bug in the implementation of StaticMutex on Windows, which
  could result in a crash at exit.

- Added Ice.UDP.RcvSize and Ice.UDP.SndSize properties. These
  properties control the size of the UDP receive and send buffers as
  well as controlling the maximum size of a datagram invocation. If a
  datagram exceeds the configured size, the Ice run time throws a
  DatagramLimitException. (Note that, on the receiving size, detection
  of this condition is dependent on the local UDP implementation --
  some UDP implementations silently drop datagrams that are too large
  to fit into the receive buffer instead of reporting the error or
  delivering a truncated datagram.)

- Added Ice.Warn.Datagrams. This property prints a warning on the
  server side if a DatagramLimitException is thrown.

- Added Ice.MessageSizeMax property. This property controls the
  maximum message size accepted by the Ice protocol in kiloBytes. The
  default value is 1024 (1 MB).

- Fixed a number of incorrect property settings in the config files
  for the demos.

- Added new property: Ice.Trace.Slicing. When set to a value > 0,
  unknown exception and class types that are sliced emit a warning.

- Added destroyOnInterrupt() to the Application
  class. destroyOnInterrupt() is now the default behavior, because
  shutdownOnInterrupt() only shuts down the server side of an