@@ -1,0 +1,18 @@
+#
+# Keep logs
+#
+Freeze.db.OldLogsAutoDelete=0
+
+#
+# Allows another process (db_archive) to access this environment
+#
+Freeze.db.DbPrivate=0
+
+#
+# "Fatal" recovery
+#
+#Freeze.db.DbRecoverFatal=1
+
+
+
+
