@@ -1,0 +1,1 @@
+Dummy file, so that `cvs export' creates this otherwise empty directory.
