@@ -246,6 +246,8 @@ Changes since version 1.1.1
    build Ice with STLPort, you need to build Berkeley DB with the same
    STLPort.
 
+ - Added Freeze hot backup demo.
+
 - Added new C++ AbstractMutex class, and helper templates
   (AbstractMutexI, AbstractMutexReadI, AbstractMutexWriteI) to easily
   implement AbstractMutex using Mutex, RecMutex, Monitor or
